Replace boxed primitive constructors